2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* ftpd.tcl:
	* ftpd.man:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the package to
	  to 1.1.3.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.man: More semantic markup, less visual one.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Updated 'info exist' to 'info exists'.

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* ftpd.tcl:
	* ftpd.n:
	* ftpd.man: Bumped to version 1.1.2.

2002-03-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.man: New, doctools manpage.

2002-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* ftpd.n: Changed to require tcl version 8.3. Code uses -unique
	  option of [lsort], introduced in that version. This fixes SF bug
	  #531799.

2001-09-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Applied patch [459197] from Hemang to fix more
	  'namespace export *'. Patch modified before application as some
	  export command are actually private (Implementations of the ftp
	  commands).

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Fixed dubious code reported by frink.

2000-11-22  Eric Melski  <ericm@interwoven.com>

	* Integrated patch from Mark O'Conner.  Patch fixed file translation
	mode bug (ie, binary vs. ascii) that prevented proper retrieval
	of binary files.  [SFBUG: 122664]

2000-11-01  Dan Kuchler  <kuchler@ajubasolutions.com>

	* Integrated patch from Keith Vetter <keith@softbook.com>