@@ -1,3 +1,8 @@
+2003-07-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* ftpd.tcl (Fs): Fixed SF tcllib bug [766112]. Copied code from
+	  style 'nslt' to exclude . and .. from the list.
+
 2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
